--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -658,7 +658,7 @@ In order to verify the generality and robustness of this topological behavior, w
 Combining all our observations, we concluded by attempting an intuitive explanation of the switching from a microscopic point of view, comparing the behavior of the spins in GdMn$_2$O$_5$ to the well-known spin-flop transition.
 While our investigation explained the lion's share of the observed magnetoelectric switching behavior in GdMn$_2$O$_5$, there remain some unanswered questions, mainly concerning the influence of domains, and what leads to the smaller jumps of the polarization curves in Fig.~\ref{fig:GdMn2O5_experiment1}.
 \\\\
-We conclude with some speculations on the technological applicability of this magnificent behavior.
+We would like to conclude with some speculations on the technological applicability of this magnificent behavior.
 First, the clearest similarity is with a binary counter, where GdMn$_2$O$_5$ could be a single crystal analogue where the two polarization states denote either a 0 or 1 bit.
 It could then be trivially used as a binary counter for magnetic field pulses.
 Second, the flatness of the energy surface close to the switching field could open the door to a degree of electric control over the magnetic configuration~\cite{Radaelli08Y,Oh14}.
