--- a/papers/Introduction/Introduction.tex
+++ b/papers/Introduction/Introduction.tex
@@ -17,10 +17,10 @@ One of the interactions that couples the two is the relativistic spin-orbit inte
 Second is the interaction between electrons and the ions of the crystal, described by phonons.
 While the potential that is associated with the ions is of great influence on the behavior of the electrons, their dynamics is so much slower that the electronic degrees of freedom can be assumed to be at the instantaneous ground state w.r.t. the positions of them.
 To put it differently: the mass of the ions is so high and the elastic potential that governs their movement so small, that they appear as a constant background potential for the nimble electrons.
-This is of course the core idea behind the well-known Born-Oppenheimer approximation~\cite{Born1927}.
+This is, of course, the core idea behind the well-known Born-Oppenheimer approximation~\cite{Born1927}.
 Likewise, the influence of the electrons on the ions appears as a smeared out average, which leads to so-called mean field approximations.
 In most cases these considerations allow for a separated description of both systems.
-However, there are exceptions for which these approximations fail spectacularly with the prime example being superconductivity, where the coupling between electrons and phonons is not only non negligible, it forms the linchpin for the exotic physics that are observed in these materials.
+However, there are exceptions for which these approximations fail spectacularly with the prime example being superconductivity, where the coupling between electrons and phonons is not only non negligible, it downright forms the linchpin for the exotic physics that are observed in these materials.
 \\\\
 This brings us to the subject matter of this work, in which the focus will lie on similar such effects that depend crucially on these often negligible interactions between two relatively well-understood subsystems.
 The three main interactions we investigate are: relativistic spin-orbit coupling (SOC), coupling charge and spin sectors of the Hamiltonian; Heisenberg magnetic exchange striction, coupling spins to atomic displacements (phonons); and electrostriction, where electric polarization leads to an associated strain texture.
@@ -67,7 +67,7 @@ The very fast (essentially instantaneous) dynamics of the SDW and relatively str
 While the technological relevance of this process is not immediately obvious, it does highlight the capabilities that a coupling between two orders with different dynamics can offer in terms of control, to the point where a pulse train can be designed using our model, such that the PLD oscillation follows a given envelope signal almost perfectly.
 \\\\
 We conclude this Thesis by a careful study of the interaction between strain and ferroelectric polarization at 180$^\circ$ ferroelectric domain walls in BaTiO$_3$~\ref{ch:Softening}.
-Surprisingly, these walls surprisingly appear mechanically softer to an applied tip, even though they are not ferroelastic and thus do not separate domains with different strain textures.
+Surprisingly, these walls appear mechanically softer to an applied tip, even though they are not ferroelastic and thus do not separate domains with different strain textures.
 Indeed, in ferroelastic domain walls one domain would be favored over the other by the force applied through the tip, meaning that when the tip is applied to the wall, it would excite a soft sliding domain wall mode.
 This mode is not present in either of the ferroelastic domains and thus the ferroelastic domain wall would appear softer.
 In our case, however, we uncover that a similar spirited but fundamentally different mechanism lies at the heart of the mechanical softness in these purely ferroelectric 180$^\circ$ domain walls.
