--- a/papers/Softening/Softening.tex
+++ b/papers/Softening/Softening.tex
@@ -397,66 +397,6 @@ Finding the values of $P$ and $u$ that minimize the total free energy $F[P,u]=\i
 We perform this integration numerically, due to the complexity of Eq.~\eqref{eq:BTO_energy} and the non homogeneous situation that occurs when a tip is applied.
 The Finite Elements Method (FEM) provides a framework to do exactly that.
 Its ability to handle complex geometries and large length scales makes it one of the most well-established methods to numerically solve realistic mathematical and physical models.
-In light of trying to be self-contained, we will give a short introduction to the topic based on Ref.~\cite{Biner}.
-\begin{figure}
-	\IncludeGraphics{fem}
-	\caption{\label{fig:BTO_fem}{\bf Finite Element Method.} a) Isoparametric local coordinate system for a triangular element. Image taken from Ref.~\cite{Biner}. b) 2D geometry spanned by triangular mesh demonstrating the flexibility of FEM meshes. Image taken from Ref.~\cite{2Dmesh}. c) Example of the geometry that is used in our simulations. d) Zoom in on the corner of the mesh shown in (c).}
-\end{figure}
-\\\\
-A fundamental building block is the isoparametric representation.
-In this representation, the geometry is divided into a set of elements that obey certain connectivity requirements, the main one being that each node must be connected to the same number of neighbor nodes.
-As an example we describe the often used triangular elements for 2D geometries, shown in Fig.~\ref{fig:BTO_fem}(a,b).
-A global-to-local coordinate transformation is then performed by using shape functions that define the morphology of the element.
-In the case of the triangle they are defined in terms of the edge lengths and angle between them. 
-Starting from the global coordinates of the nodes ($x_i$, $y_i$), any coordinate inside the element can be written as:
-\begin{align}
-x(\zeta, \eta) &= \sum_i^n N_i(\zeta, \eta) x_i,\\
-y(\zeta, \eta) &= \sum_i^n N_i(\zeta, \eta) y_i,
-\end{align}
-and functions $f$ are similarly interpolated as:
-\begin{equation}
-	\label{eq:BTO_funcinterp}
-	f(\zeta, \eta) = \sum_i^n N_i(\zeta, \eta) f_i.
-\end{equation}
-In these equations, $i$ iterates through the $n$ nodes of the element, and $\zeta$ and $\eta$ are the axes of the local coordinate system (see Fig.~\ref{fig:BTO_fem}(a)).
-From these equations it is clear that each node has a separate shape function.
-They have to be chosen in such a way that they adhere to certain conditions:
-\begin{itemize}
-	\item Interpolation condition: $N_i$ is 1 at node $i$ and zero at the other nodes.
-	\item Local support condition: $N_i$ vanishes at each edge that does not contain $i$.
-	\item Interelement compatibility condition: Satisfies continuity between neighboring elements that include node $i$.
-	\item Completeness condition: Any field that is a linear polynomial in $x$ and $y$ is represented exactly.
-\end{itemize}
-
-Since we need the derivatives of the $P$ and $u$ fields in order to calculate the free energy density, we perform the chain rule and find for any function $f$:
-\begin{align}
-	\label{eq:BTO_derivatives}
-	\frac{\partial f}{\partial \zeta} &= \sum_i^n \frac{\partial N_i}{\partial \zeta} \cdot f_i \\
-	\frac{\partial f}{\partial \eta}  &= \sum_i^n \frac{\partial N_i}{\partial \eta} \cdot f_i\nonumber.
-\end{align}
-In the numerical implementation, these derivatives are found for each element by first computing the Jacobian with the partial derivatives of the global coordinates $x$ and $y$ w.r.t the local ones $\zeta$ and $\eta$ and then performing an inversion.
-This inversion also requires calculating the determinant of the Jacobian, which can be reused to calculate the area or volume of the element to be used during the integration.
-
-Certain points, called quadrature points, are then selected inside each element.
-The function values of the $P$ and $u$ fields are then interpolated at these points using their values at the nodes of the element and the shape functions.
-Filling them into the free energy density Eq.~\eqref{eq:BTO_energy} results in an approximation of the contribution of each element to the total free energy, which is then found by summation. 
-The nodal values of the fields are therefore the variables of our model. 
-A big bonus of the isoparametric representation, applied in this way, is that gradients of the fields can be evaluated purely locally, inside each element (see Eq.~\eqref{eq:BTO_derivatives}).
-It also allows for a great flexibility through the density of the chosen grid, the morphology of the elements, and the order of the interpolating shape functions $N_i$ that are used in Eq.~\eqref{eq:BTO_funcinterp}.
-
-We developed our own code in order to run the FEM simulations, based on the building blocks supplied by the \href{https://github.com/KristofferC/JuAFEM.jl}{JuAFEM.jl} package.
-We use a rectangular geometry uniformly spanned by tetrahedron elements, as shown in Fig.~\ref{fig:BTO_fem}(c,d).
-This choice is made since the uniform mesh mimics numerically the Peierls-Nabarro barriers that are created by the lattice of the crystal.
-As will be discussed further below, these pin the wall to a certain degree and should be taken into account for the simulation to be realistic.
-\\\\
-The last ingredient of the simulation is a way to optimize the fields in order to reach the equilibrium condition at minimum energy, both with and without applied tip.
-To achieve this we use the Conjugate Gradient Method \cite{Hestenes1952,Hager2005} as implemented in the package Optim.jl \cite{mogensen2018optim}.
-It is an iterative scheme that uses the gradient and previous step to decide on the next step direction. 
-This requires us to determine the partial derivatives of the total energy in terms of all the degrees of freedom, i.e. the value of each component of $P$ and $u$ at the node points of the mesh.
-We chose to use a forward automatic differentiation scheme as implemented in ForwardDiff.jl \cite{RevelsLubinPapamarkou2016}, again for its remarkable simplicity and speed (as an idea, on a 24 core E5-2680 v3 server, the $\approx$ 3.5 million partial derivatives are computed in around 2 seconds).
-The core concept of this method lies in the realization that any computer program can be decomposed into elemental operations. By defining the derivatives of these, and by utilizing the chain rule, it is then possible to numerically generate the ``symbolically'' differentiated program numerically.
-The forward mode method in ForwardDiff.jl uses dual numbers that carry the information of both the value, as well as the residual value. These residuals accumulate the derivative values as the number flows through the operations of the program, which can be collected at the end to construct the partial derivatives.
-For further information see Ref.~\cite{Hoffmann2016}.
 \\\\
 Using the parameters from previous ab-initio results \cite{Marton2010} and reported in Tab.~\ref{tab:BTO_param}, we first optimized the equilibrium situation for both a uniform domain and a single domain wall. The result of the latter is shown in Fig.~\ref{fig:BTO_wall}.
 A Gaussian force field, $\frac{a}{\sigma \sqrt{2\pi}}e^{-\frac{(x-x_{\rm tip})^2}{2\sigma^2}}$ with $\sigma = 1 \cdot 10^{-9}$ representing the contact radius and $a = 1 \cdot 10^{-18} \frac{eV}{nm^3}$, was then applied at various positions $x_{\rm tip}$ throughout both geometries.
@@ -513,7 +453,7 @@ Comparing the two simulation protocols, we can also observe that when the wall i
 We find a maximum softening of about 20\% in this case, which is remarkably close to the experimental measurements.
 \begin{figure}
 	\IncludeGraphics{2D_bending}
-	\caption{\label{fig:BTO_bending_sim}{\bf Bending Wall} Simulations where the bottom of the wall is kept fixed to the equilibrium without a tip. In each panel, the coloring indicates the position where the tip is applied to the sample. a) Surface profile of the wall. b) Polarization distribution at the surface. Notice the movement of the wall center when the tip is applied. c) Deformation of the surface after applying the tip. d) Maximum absolute value of the deformation in (c). e) Relative stiffness depending on where the tip is applied. f) Strain profile when tip is too far from wall to make it bend. g) When the tip is close to the wall causing it to bend. In panels (f, g) the vertical and dashed white lines denote the equilibrium and perturbed positions of the wall, respectively.}
+	\caption{\label{fig:BTO_bending_sim}{\bf Bending Wall} Simulations where the bottom of the wall is kept fixed to the equilibrium without a tip. In each panel, the coloring indicates the position where the tip is applied to the sample. a) Surface profile of the wall. b) Polarization distribution at the surface. Notice the movement of the wall center when the tip is applied. c) Deformation of the surface after applying the tip. d) Maximum absolute value of the deformation in (c). e) Relative stiffness depending on where the tip is applied. f) Strain profile when tip is too far from wall to make it bend. The wall is represented by the white line and does not move due to the tip. g) Bending of the wall when the tip is applied close to the wall. The full and dashed white lines denote the position of the wall before and after the tip is applied, respectively.}
 \end{figure}
 \begin{figure}
 	\IncludeGraphics{2D_sliding}
