I think all issues with figures are taken care of

--- a/papers/Cr/Cr.tex
+++ b/papers/Cr/Cr.tex
@@ -129,7 +129,7 @@ This leads to the following expression for the total free energy:
 	\label{eq:Cr_landau}
 	F(L, y, T_L) = \frac{\alpha}{2}(T_L - T_N) L^2 + \frac{\beta}{4} L^4 - g L^2 y + \frac{\rho y_0^2 \omega_0^2}{2} y^2 + \frac{b}{4} y^4,
 \end{equation}
-where $L$, $y$ and $T_L$ are the time dependent variables.
+where $L$, $y$ and $T_L$ are the time dependent variables, and all coefficients are positive.
 The double well potential that causes the SDW phase transition is characterized by the coefficients $\alpha$ and $\beta$,  and critical temperature $T_N$ below which the SDW order sets in.
 The coupling between $L$ and $y$ due to exchange striction is described by term with $g$.
 Only even orders of $L$ appear in the free energy, since the energy is time reversal even, but $L$ is time reversal odd.
